fixed up many things
added the option for a milder message that gives you the option to search with ecosia.

--- a/options.html
+++ b/options.html
@@ -19,8 +19,8 @@
           </div>
 
           <div class="browser-style panel-formElements-item"> 
-            <input  type="checkbox" id="fullblock"/>
-            <label class="browser-style" for="fullblock">Fully Block websites in the list</label>
+            <input  type="checkbox" id="mildmessage"/>
+            <label class="browser-style" for="mildmessage">Show a milder message that can be clicked away</label>
           </div>
           
           <div class="panel-section panel-formElements-item">
